# vibetotext

./: .gitignore  README.md  build_windows.bat  dev.py  pyproject.toml  setup_app.py
history-app/: analytics.js  entitlements.mac.plist  index.html  main.js  package-lock.json  package.json  renderer.js  styles.css
src/vibetotext/: __init__.py  __main__.py  cli.py  configure.py  context.py  history.py  history_ui.py  llm.py  output.py  recorder.py  transcriber.py  ui.py  ui_standalone.py  ui_tkinter.py
